<resources>
    <string-array name="status_array">
        <item>User</item>
        <item>Driver</item>
        <item>Admin</item>
    </string-array>
    <string name="app_name">PataPata</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="reg">Register</string>
    <string name="edit_account">Edit Account</string>
    <string name="title_activity_driver">activity_driver</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="suggested_vendors">Suggested Vendors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_email">Enter Account Email</string>

    <!-- Litre options -->
    <string-array name="Litres">
        <item>Select Litres</item>
        <item>1000</item>
        <item>2500</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="report">REPORT</string>

    <!-- snackbar -->
    <string name="snack">Want to purchase?</string>
    <string name="Buy">Buy</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="confirm_distance_message">Your Driver is this far away</string>
    <string name="finish_button">Finish</string>
    <string name="cancel_button">Cancel</string>
    <string name="report_button">Report</string>
    <string name="phone_number_prompt">Entere your Phone Number</string>
    <string name="send_report_prompt">What seems to be the issue?</string>
    <string name="send_report_hint">Describe Your Problem Here</string>
    <string name="submit_button">Submit</string>
    <string name="login_button">LOGIN</string>
    <string name="login_text">LOGIN</string>
    <string name="create_account_text">CREATE ACCOUNT</string>
    <string name="tile_bar_user_module">User Module</string>
    <string name="title_driver_module">Driver Module</string>
    <string name="mainfragment_prompt">How many Litres Required?</string>
    <string name="notification_prompt">Can you deliver the amount of litres shown below?</string>
    <string name="change_language">Change to Kiswahili</string>
    <string name="hello_world">Channge Language</string>
    <string name="btn_swa">Kiswahili</string>
    <string name="request_location_is_at">Request Location is at</string>
    <string name="call_this_number_for_more_detailed_directions">Call this number for more detailed directions</string>

    <!-- Language options -->
    <string-array name="languages">
        <item>Choose Language</item>
        <item>English</item>
        <item>Kiswahili</item>
    </string-array>

</resources>
