<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_location">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:paddingBottom="75dp"
            android:text="@string/request_location_is_at"
            android:textColor="@color/colorAccent"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/user_location"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="24dp"
            android:text="Location"/>

        <TextView
            android:id="@+id/user_no"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/finish_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/finish_transaction"
            android:text="@string/finish_button"
            />
        <Button
            android:id="@+id/cancel_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cancel_transaction"
            android:text="@string/cancel_button"/>
        <Button
            android:id="@+id/report_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/report_transaction"
            android:text="@string/report_button"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>