<?xml version="1.0" encoding="utf-8"?>

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driverMaps" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/driver_finish_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/finish_transaction"
            android:text="@string/finish_button"
            />
        <Button
            android:id="@+id/driver_cancel_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cancel_transaction"
            android:text="@string/cancel_button"/>
        <Button
            android:id="@+id/driver_report_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/report_transaction"
            android:text="@string/report_button"/>
        <TextView
            android:id="@+id/ulat"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/ulng"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
        android:id="@+id/dlat"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <TextView
        android:id="@+id/dlng"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    </fragment>
